# TurtlesimROS2SimpleDemo

./: README.md
turtle_ws/src/turtle_interfaces/: CMakeLists.txt  package.xml
turtle_ws/src/turtle_interfaces/srv/: GeneratePOI.srv
turtle_ws/src/turtle_traffic/: package.xml  setup.cfg  setup.py
turtle_ws/src/turtle_traffic/turtle_traffic/: perform_movement.py  point_gen.py  turtle_move.py
