<package format="3">
  <name>turtle_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for turtle game</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>turtlesim</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
