<?xml version="1.0"?>
<package format="3">
  <name>turtle_traffic</name>
  <version>0.1.0</version>
  <description>Python nodes for turtle game traffic logic and movement control</description>
  <maintainer email="your_email@example.com">Yash Jain</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtle_interfaces</exec_depend>

  <build_depend>turtle_interfaces</build_depend>
  <exec_depend>turtle_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
